Testsuite/ManualTests/744/744.c.lcov
    1|       |extern void abort(void);
    2|       |extern void exit(int);
    3|       |static int v = 3;
    4|       |
    5|      1|void f() {
    6|      1|  int v = 4;
    7|      1|  {
    8|      1|    extern int v; /* { dg-error "static" } */
    9|      1|    if (v != 3)
   10|      0|      abort();
   11|      1|  }
   12|      1|}
   13|       |
   14|      1|int main() {
   15|      1|  f();
   16|      1|  exit(0);
   17|      1|}

